ckanext/data_depositario/fanstatic/styles/custom.css
/* ... */
    .btn:hover, .btn:focus{
      background: none;
      background-color:#00e09b;
      box-shadow: none;
      color: black;
      text-shadow: none;
      border: solid 2px #00e09b  !important;
      text-decoration: none;
      transition: 0.2s;
    }


    .btn_norm{
      border: 0;
      background: none;
      box-shadow: none;
      color: black;
      border: solid 1px #000000 !important;
      text-shadow: none;
      padding: 8px 22px;
      text-decoration: none;
      border-radius:4px;
    }
    .btn_norm:hover, .btn_norm:focus{
      border: 0;
      background: none;
      background-color:#00e09b;
      box-shadow: none;
      color: white;
      text-shadow: none;
      border: solid 1px #00e09b  !important;
      text-decoration: none;
      transition: 0.2s;
    }

    .btn_float{
      border: 0;
      background: none;
      background-color: none;
      color: #00e09b !important;
      border: solid 2px #00e09b  !important;
      border-radius: 4px;
      text-shadow: none;
      padding: 12px 22px;
    }
    .btn_float:hover, .btn_float:focus{
      border: 0;
      background: none;
      background-color:#fff;
      box-shadow: none;
      color: #000;
      text-shadow: none;
      border: solid 2px #fff  !important;
      box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
      text-decoration: none;
      transition: 0.15s cubic-bezier(0.175, 0.885, 0.32, 1.02);;
    }

    .btn_search{
      margin-top: 12px;
      border: 0;
      background: none;
      background-color:#333;
      box-shadow: none;
      color: white;
      text-shadow: none;
      border-radius: 30px;
      padding: 12px 15px;
      border: none  !important;
      font-size: 16px;
      transition: 0.2s;
    }
    @media (max-width: 767px) {
      .btn_search{
      margin-top:5px;
      }
    }

    .btn_search:hover, .btn_search:focus{
      background-color:#00e09b;
    }


    /* MASTHEAD ANIMATION
    -------------------------------------------------- */
    .landing_ani{
      position: relative;
      height: 200px;
      width: 350px;
      right: 0;
      z-index: 1500 !important;
    }


    /* Featurettes
    ------------------------- */

    .mast_heading{
      padding: 150px 0; /* Vertically center images part 1: add padding above and below text. */
      overflow: hidden;
    }

    @media (min-width: 767px) and (max-width: 978 px) {
      .mast_heading{
        padding: 100px 0;
      }
    }

    @media (max-width: 767px) {
      .masthead_main{
        height: 250px;
      }
      .mast_heading{
        padding: 75px 0;
      }
    }

    .featurette-divider {
      margin: 80px 0; /* Space out the Bootstrap <hr> more */
    }
    .featurette {
      overflow: hidden; /* Vertically center images part 2: clear their floats. */
    }
    .featurette-image {
      margin-top: -120px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
    }

    .featurette-image.pull-left {
      margin-right: 40px;
    }
    .featurette-image.pull-right {
      margin-left: 40px;
    }

    .featurette-heading {
      font-size: 35px;
      font-weight: 700;
      line-height: 1.45;
      display: inline;
      padding-bottom: 6px;
    }

    .featurette-heading a {
      text-decoration: none;
      color: #000;
    }

    .index_topics input[type="text"]{
      border: 0px;
      border-bottom: 2px solid #cdcdcd;
      border-radius: 0px;
      box-shadow: none;
      font-size: 16px;
      color: #000;
      padding-top: 20px;
      background-color: transparent;
    }
    @media (max-width: 767px) {
    .index_topics input[type="text"]{
      width:120px;
      padding-top:10px;
    }
    }

    .index_topics input[type="text"]:focus{
      border-bottom: 2px solid #00e09b;
    }

    .index_topics .site-search {
      margin: 0;
    }

    .js .modify_bloc_1{
      height: 420px;
      background: #012819;
      overflow: hidden;
      background-image: linear-gradient(to right, #00e09b -30%, #012819 40%, #012819 95%, #00e09b 130%) ;
    }

    .modify_bloc_1{
      height: 420px;
      background: #012819;
      overflow: hidden;
      background-image: url("../images/visual-md.png");
      background-repeat:no-repeat;
      background-position: 70% 45%;
      background-size: auto 65% ;
    }

    .m1_bloc_1{
      display: block;
      float: left;
      width: 400px;
    }

    .js .m1_bloc_2{
      display: block;
      float: left;
      width: 132px;
      height: 169px;
      margin-top: -41px;
      background-image: url("../images/logo_ani.svg");
      background-repeat: no-repeat;
    }

    .m1_bloc_2{
      display: none;
    }

    .m1_bloc_3{
      display: block;
      float: left;
      width: auto;
      margin-top: -81px;
      padding-left: 1px;
    }

    @media (max-width: 979px) {
      .js .modify_bloc_1{
        background-image: url("../images/visual-md.png");
        background-repeat:no-repeat;
        background-position: 90% 40%;
        background-size: 55% auto;
      }
    }

    @media (max-width: 767px) {
      .js .modify_bloc_1{
        background-blend-mode: overlay;
        background-position: 50% 50%;
        background-size: 90% auto;
        height: 250px;
      }
      .js .m1_bloc_1{
        padding-left: 15px;
      }
    }

    .row-fluid .padding_tb_sm .bg_white .justify-content-center .modify_bloc_2{
      background-color: white;
    }

    .modify_bloc_2{
      background-color: #edf7f1;
    }

    .modify_bloc_3{
      border-top: #ececec 10px solid;
      background-color: #ffffff;
      padding-bottom: 25px;
    }

    .modify_bloc_3 .tx_black{
      border: 4px white solid;
      width: 100%;
      font-size: 13px;
      line-height: 1.5em;
    }

    :lang(zh_TW) .modify_bloc_3 .tx_black{
      font-size: 16px;
    }

    .img-circle{
      border: 5px #012819 solid;
      background: #012819;
    }
/* ... */

